test/preprocessor/valid/version-es.glsl
// OpenGL ES
#version 300 es
