test/preprocessor/invalid/version-profile.glsl
#version 300 // Missing profile
